babel编译支持es3，根据配置项适配ie6、7、8

--- a/template/src/index.html
+++ b/template/src/index.html
@@ -6,5 +6,11 @@
 </head>
 <body>
 	1234567890
+<!--[if lt IE 9 ]>
+<script src="http://s1.qhimg.com/!fbaf1326/es5-shim.min.js"></script>
+<script src="http://s0.qhimg.com/!2d038e37/es5-sham.min.js"></script>
+<script src="http://s6.qhimg.com/!10cc5473/json2.js"></script>
+<script src="http://s9.qhres.com/!b935e4a7/consolePolyfill.js"></script>
+<![endif]-->
 </body>
 </html>
